src/App.css
html {
  box-sizing: border-box;
  font-size: 16px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}
.App {
  text-align: center;
  background: linear-gradient(180deg, #217CC0 0%, #74CCF2 85.5%);
  min-height: 100vh;
  font-family: 'Staatliches', cursive;
  color: white;
  word-break: break-all;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.title-wrapper {
  width: 116px;
}

